# mailkite

./: .gitattributes  LICENSE  buf.yaml  go.mod  go.sum  justfile  workspace.protobuf.yaml
docker/postgres/: docker-compose.yaml
docker/postgres/init-scripts/: create-mailkite-db.sql
hasura/: compose.yaml  supergraph.yaml
hasura/.hasura/: context.yaml
hasura/mailkite/: subgraph.yaml
hasura/mailkite/metadata/: BounceResource.hml  CampaignLists.hml  CampaignResource.hml  CampaignStats.hml  DeleteBounceResourceById.hml  DeleteCampaignListsById.hml  DeleteCampaignResourceById.hml  DeleteCampaignStatsById.hml  DeleteMailinglistResourceById.hml  DeleteMediaResourceById.hml  DeletePrismaMigrationsById.hml  DeleteSubscriberResourceById.hml  DeleteSubscriberSubscriptionsById.hml  DeleteTemplateResourceById.hml  InsertBounceResource.hml  InsertCampaignLists.hml  InsertCampaignResource.hml  InsertCampaignStats.hml  InsertMailinglistResource.hml  InsertMediaResource.hml  InsertPrismaMigrations.hml  InsertSubscriberResource.hml  InsertSubscriberSubscriptions.hml  InsertTemplateResource.hml  MailinglistResource.hml  MediaResource.hml  PrismaMigrations.hml  SubscriberResource.hml  SubscriberSubscriptions.hml  TemplateResource.hml  UpdateBounceResourceById.hml  UpdateCampaignListsById.hml  UpdateCampaignResourceById.hml  UpdateCampaignStatsById.hml  UpdateMailinglistResourceById.hml  UpdateMediaResourceById.hml  UpdatePrismaMigrationsById.hml  UpdateSubscriberResourceById.hml  (+4 more)
protobuf/: README.md
tools/protobuf/docs/: BUILD.bazel  main.go  summary.go
(+45 files in other folders)
