load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "docs_lib",
    srcs = [
        "main.go",
        "summary.go",
    ],
    importpath = "github.com/machanigroup/mailkite/tools/protobuf/docs",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "docs",
    embed = [":docs_lib"],
    visibility = ["//visibility:public"],
)
